@@ -145,6 +145,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #17442: InteractiveInterpreter now displays the full chained traceback
+  in its showtraceback method, to match the built in interactive interpreter.
+
 - Issue #10510: distutils register and upload methods now use HTML standards
   compliant CRLF line endings.
 
